--- a/Russian/main/MiuiScreenRecorder.apk/res/values-ru/strings.xml
+++ b/Russian/main/MiuiScreenRecorder.apk/res/values-ru/strings.xml
@@ -13,7 +13,7 @@
     <string name="screen_orientation">Ориентация</string>
     <string name="screen_orientation_summary">Ориентация записываемого видео</string>
     <string name="sound_source">Источник звука</string>
-    <string name="sound_source_summary">Звук системы или микрофон</string>
+    <string name="sound_source_summary">Источник звука при записи видео</string>
     <string name="screen_record_option">Настройки записи</string>
     <string name="show_screen_touch">Показывать нажатия</string>
     <string name="show_screen_touch_summary">Показывать белую точку в местах нажатия</string>
@@ -44,7 +44,7 @@
     <string name="low_momery_warning">Не достаточно памяти. Запись остановлена и видео сохранено.</string>
     <string name="button_back">Назад</string>
     <string name="button_clear_storage">Очистить</string>
-    <string name="button_goon_recorder">Resume</string>
+    <string name="button_goon_recorder">Продолжить</string>
     <string name="button_confirm">OK</string>
     <string name="delete_confirm_text">Удалить эту запись?</string>
     <string name="delete_confirm_text_multi1">Удалить</string>
@@ -64,5 +64,5 @@
 	<string name="cannot_change_parames">Невозможно изменить параметры во время записи</string>
 	<string name="no_sound">Без звука</string>
     <string name="mic_sound">Микрофон</string>
-    <string name="loopback_sound">Loopback sound</string>
+    <string name="loopback_sound">Система</string>
 </resources>
