--- a/Russian/main/Contacts.apk/res/values-ru/strings.xml
+++ b/Russian/main/Contacts.apk/res/values-ru/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="accessibility_calllog_detail">Журнал вызовов</string>
+	 <string name="call_sim_menu_title_suffix">(первичная)</string>
+     <string name="callrecordview_menu_misim">Mi SIM</string>
+     <string name="sim_unloaded">SIM-карта выгружена</string>
 	 <string name="update_sim_contact_photo_toast">Нельзя установить фото для контактов SIM-карты</string>
 	 <string name="contact_clear_search_history">Очистить историю</string>
      <string name="contact_search_history">История</string>
